--- a/src/app/penztar/penztar-list/penztar-list.component.html
+++ b/src/app/penztar/penztar-list/penztar-list.component.html
@@ -6,12 +6,16 @@
                [enKereses]="!eppFrissit" (Kereses)="onKereses()"
                [enUj]="!eppFrissit && mod" (Uj)="uj()">
   </app-toolbar>
-  <app-tabla [items]="penztarservice.Dto"
+  <app-tabla #tabla
+             [items]="penztarservice.Dto"
              [colsets]="penztarservice.GridSettings"
              [zoom]="penztarservice.zoom"
-             [(selectedrow)]="ti"
              (forzoom)="selectforzoom($event)"
-             (forid)="setClickedRow($event)">
+             (forid)="setClickedRow($event)"
+             [egyTemplate]="gridegy">
   </app-tabla>
+  <ng-template #gridegy>
+    <app-penztar-egy (torlesutan)="torlesutan()"></app-penztar-egy>
+  </ng-template>
 </div>
 
