--- a/src/app/szamlazasirend/szamlazasirend-list/szamlazasirend-list.component.html
+++ b/src/app/szamlazasirend/szamlazasirend-list/szamlazasirend-list.component.html
@@ -10,9 +10,13 @@
       </button>
     </nav>
   </div>
-  <app-tabla [items]="szamlazasirendservice.Dto"
+  <app-tabla #tabla
+             [items]="szamlazasirendservice.Dto"
              [colsets]="szamlazasirendservice.GridSettings"
-             [(selectedrow)]="ti"
-             (forid)="setClickedRow($event)">
+             (forid)="setClickedRow($event)"
+             [egyTemplate]="gridegy">
   </app-tabla>
+  <ng-template #gridegy>
+    <app-szamlazasirend-egy (torlesutan)="torlesutan()"></app-szamlazasirend-egy>
+  </ng-template>
 </div>
