--- a/src/app/tools/tabla/tabla.component.html
+++ b/src/app/tools/tabla/tabla.component.html
@@ -7,7 +7,7 @@
   </thead>
   <tbody>
   <ng-container *ngFor="let item of items; let i = index">
-    <tr (click)="clickforrow(i)" [class.active]="i == selectedrow">
+    <tr (click)="clickforrow(i)" [class.active]="i === clickedidindex || i === clickedrowindex">
       <td *ngIf="zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="clickforzoom(i)">
         <i class="fa fa-check" aria-hidden="true"></i>
       </td>
@@ -23,6 +23,12 @@
         <div *ngIf="cs.Type === 'BOOL'">{{item[cs.Name] | boolhun}}</div>
       </td>
     </tr>
+    <tr *ngIf="i === clickedidindex && egyTemplate !== undefined" [class.active]="i === clickedidindex">
+      <td colspan="100">
+        <ng-template *ngTemplateOutlet="egyTemplate"></ng-template>
+      </td>
+    </tr>
   </ng-container>
   </tbody>
 </table>
+
