--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,7 @@ html, body {
 
 .alapkeret {
   overflow: auto;
+  background: white;
   border: 1px solid lightgrey;
   padding: 8px;
   margin-bottom: 5px;
