-egy komponens felhasználóig + törlés eseményt mindenütt megnézni

--- a/src/app/penztartetel/penztartetel-list/penztartetel-list.component.html
+++ b/src/app/penztartetel/penztartetel-list/penztartetel-list.component.html
@@ -11,7 +11,7 @@
              [colsets]="penztartetelservice.GridSettings">
   </app-tabla>
 
-  <app-toolbarfooter [enKereses]="!elsokereses && !eppFrissit"
+  <app-toolbarfooter [enKereses]="!penztartetelservice.elsokereses && !eppFrissit"
                      [rekordszam]="penztartetelservice.Dto.length"
                      [osszesrekord]="penztartetelservice.OsszesRekord"
                      (KeresesTovabb)="onKeresesTovabb()">
