--- a/src/app/tools/tabla/tabla.component.css
+++ b/src/app/tools/tabla/tabla.component.css
@@ -1,7 +1,8 @@
 .table tr.active td {
-  background-color: silver;
-  /*background-color: #007bff !important;*/
-  /*color: white;*/
+  background-color: #abdde5;
+}
+.table tr.inactive td {
+  background-color: white;
 }
 
 .datum {
