--- a/src/app/tools/tabla/tabla.component.html
+++ b/src/app/tools/tabla/tabla.component.html
@@ -7,7 +7,7 @@
   </thead>
   <tbody>
   <ng-container *ngFor="let item of items; let i = index">
-    <tr (click)="clickforrow(i)" [class.active]="i === clickedidindex || i === clickedrowindex">
+    <tr (click)="clickforrow(i)" [className]="i === clickedidindex || i === clickedrowindex ? 'active' : 'inactive'">
       <td *ngIf="zoom" style="text-align: right; color: blue; text-decoration: underline; cursor: pointer"(click)="clickforzoom(i)">
         <i class="fa fa-check" aria-hidden="true"></i>
       </td>
