--- a/src/app/volume/volume-list/volume-list.component.html
+++ b/src/app/volume/volume-list/volume-list.component.html
@@ -7,7 +7,7 @@
              [egyTemplate]="gridegy">
   </app-tabla>
   <ng-template #gridegy>
-    <app-volume-egy (torlesutan)="torlesutan()"></app-volume-egy>
+    <app-volume-egy></app-volume-egy>
   </ng-template>
 </div>
 
