--- a/src/app/kifizetes/kifizetes-egy/kifizetes-egy.component.html
+++ b/src/app/kifizetes/kifizetes-egy/kifizetes-egy.component.html
@@ -2,7 +2,7 @@
   <div>
     <nav>
       <button [disabled]="eppFrissit" (click)="reszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>Részletesen
+        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>
       </button>
 
       <button [disabled]="eppFrissit"
