--- a/src/app/penztar/penztar-egy/penztar-egy.component.html
+++ b/src/app/penztar/penztar-egy/penztar-egy.component.html
@@ -2,23 +2,23 @@
   <div>
     <nav>
       <button [disabled]="eppFrissit" (click)="reszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>Részletesen
+        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>
       </button>
 
-      <button [disabled]="eppFrissit || penztarservice.DtoSelectedIndex === -1 || !mod || !nyitva"
+      <button [disabled]="eppFrissit || !mod || !nyitva"
               (click)="torles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-minus" aria-hidden="true"></i>
       </button>
-      <button [disabled]="eppFrissit || penztarservice.DtoSelectedIndex === -1 || !mod || !nyitva"
+      <button [disabled]="eppFrissit || !mod || !nyitva"
               (click)="modositas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-edit" aria-hidden="true"></i>
       </button>
 
-      <button [disabled]="eppFrissit || penztarservice.DtoSelectedIndex === -1"
+      <button [disabled]="eppFrissit"
               (click)="tetelek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Tételek
       </button>
-      <button [disabled]="eppFrissit || penztarservice.DtoSelectedIndex === -1"
+      <button [disabled]="eppFrissit"
               (click)="export()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Export
       </button>
