--- a/src/app/ajanlatkeres/ajanlatkeres-egy/ajanlatkeres-egy.component.html
+++ b/src/app/ajanlatkeres/ajanlatkeres-egy/ajanlatkeres-egy.component.html
@@ -2,7 +2,7 @@
   <div>
     <nav>
       <button (click)="reszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>Részletesen
+        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>
       </button>
       <button [disabled]="!enprojekt" (click)="projekt()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Projekt
