--- a/src/app/cikk/cikk-egy/cikk-egy.component.html
+++ b/src/app/cikk/cikk-egy/cikk-egy.component.html
@@ -2,22 +2,22 @@
   <div>
     <nav>
       <button [disabled]="eppFrissit" (click)="reszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>Részletesen
+        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>
       </button>
 
-      <button [disabled]="eppFrissit || cikkservice.DtoSelectedIndex === -1 || !mod"
+      <button [disabled]="eppFrissit || !mod"
               (click)="torles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-minus" aria-hidden="true"></i>
       </button>
-      <button [disabled]="eppFrissit || cikkservice.DtoSelectedIndex === -1 || !mod"
+      <button [disabled]="eppFrissit || !mod"
               (click)="modositas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-edit" aria-hidden="true"></i>
       </button>
-      <button [disabled]="eppFrissit || cikkservice.DtoSelectedIndex === -1"
+      <button [disabled]="eppFrissit"
               (click)="beszerzes()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Beszerzés
       </button>
-      <button [disabled]="eppFrissit || cikkservice.DtoSelectedIndex === -1"
+      <button [disabled]="eppFrissit"
               (click)="kivet()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Kivét
       </button>
