--- a/src/app/dokumentum/dokumentum-egy/dokumentum-egy.component.html
+++ b/src/app/dokumentum/dokumentum-egy/dokumentum-egy.component.html
@@ -10,7 +10,7 @@
         <i class="fa fa-arrow-left" style="margin-right: 3px" aria-hidden="true"></i>Vissza
       </button>
       <button (click)="reszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>Részletesen
+        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>
       </button>
       <button [disabled]="eppFrissit" (click)="torles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-minus" aria-hidden="true"></i>
