--- a/src/app/primitiv/afakulcs/afakulcs-szerkesztes/afakulcs-szerkesztes.component.html
+++ b/src/app/primitiv/afakulcs/afakulcs-szerkesztes/afakulcs-szerkesztes.component.html
@@ -5,28 +5,23 @@
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">ÁFA kulcs</div>
-      </div>
-      <div class="col-md-2">
+      <div>
+        <div>ÁFA kulcs</div>
         <input type="text" class="form-control form-control-sm" id="afakulcs"
-               maxlength="10" required autocomplete="off"
+               maxlength="10" required autocomplete="off" style="width: 120px"
                [(ngModel)]="afakulcsservice.DtoEdited.Afakulcs1" name="afakulcs">
       </div>
     </div>
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Az ÁFA mértéke, %</div>
-      </div>
-      <div class="col-md-1">
+      <div>
+        <div>Az ÁFA mértéke, %</div>
         <input type="number" class="form-control form-control-sm" id="egysegar"
-               required autocomplete="off"
+               required autocomplete="off" style="width: 80px"
                [(ngModel)]="afakulcsservice.DtoEdited.Afamerteke" name="egysegar">
       </div>
     </div>
 
-    <div class="row no-gutters" style="margin-bottom: 10px">
-      <div class="col-md-2"></div>
+    <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" [disabled]="eppFrissit" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
