--- a/src/app/projektteendo/projekt-teendo-egy/projekt-teendo-egy.component.html
+++ b/src/app/projektteendo/projekt-teendo-egy/projekt-teendo-egy.component.html
@@ -2,14 +2,14 @@
   <div>
     <nav>
       <button [disabled]="eppFrissit" (click)="reszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>Részletesen
+        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>
       </button>
 
-      <button [disabled]="eppFrissit || projektteendoservice.DtoSelectedIndex === -1"
+      <button [disabled]="eppFrissit"
               (click)="torles()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-minus" aria-hidden="true"></i>
       </button>
-      <button [disabled]="eppFrissit || projektteendoservice.DtoSelectedIndex === -1"
+      <button [disabled]="eppFrissit"
               (click)="modositas()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         <i class="fa fa-edit" aria-hidden="true"></i>
       </button>
