--- a/src/app/volume/volume-egy/volume-egy.component.html
+++ b/src/app/volume/volume-egy/volume-egy.component.html
@@ -2,10 +2,10 @@
   <div>
     <nav>
       <button [disabled]="eppFrissit || volumeservice.eppTesztel" (click)="reszletek()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
-        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>Részletesen
+        <i class="fa fa-file" style="margin-right: 3px" aria-hidden="true"></i>
       </button>
 
-      <button [disabled]="eppFrissit || volumeservice.eppTesztel || volumeservice.DtoSelectedIndex === -1" (click)="ellenorzes()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
+      <button [disabled]="eppFrissit || volumeservice.eppTesztel" (click)="ellenorzes()" class="btn btn-sm btn-outline-primary toolbarcontrolmargins">
         Ellenőrzés
       </button>
     </nav>
