--- a/src/app/primitiv/felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
+++ b/src/app/primitiv/felhasznalo/felhasznalo-szerkesztes/felhasznalo-szerkesztes.component.html
@@ -5,50 +5,40 @@
   <form #f="ngForm" (ngSubmit)="onSubmit()">
 
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Azonosító</div>
-      </div>
-      <div class="col-md-2">
-        <input type="text" class="form-control form-control-sm" id="azonosito"
+      <div>
+        <div class="egylabel">Azonosító</div>
+        <input type="text" class="form-control form-control-sm oszlop4" id="azonosito"
                maxlength="30" required autocomplete="off"
                [(ngModel)]="felhasznaloservice.DtoEdited.Azonosito" name="azonosito">
       </div>
     </div>
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Név</div>
-      </div>
-      <div class="col-md-2">
-        <input type="text" class="form-control form-control-sm" id="nev"
+      <div>
+        <div class="egylabel">Név</div>
+        <input type="text" class="form-control form-control-sm oszlop4" id="nev"
                maxlength="100" required autocomplete="off"
                [(ngModel)]="felhasznaloservice.DtoEdited.Nev" name="nev">
       </div>
     </div>
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Telefon</div>
-      </div>
-      <div class="col-md-2">
-        <input type="text" class="form-control form-control-sm" id="telefon"
+      <div>
+        <div class="egylabel">Telefon</div>
+        <input type="text" class="form-control form-control-sm oszlop4" id="telefon"
                maxlength="50" required autocomplete="off"
                [(ngModel)]="felhasznaloservice.DtoEdited.Telefon" name="telefon">
       </div>
     </div>
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Email</div>
-      </div>
-      <div class="col-md-2">
-        <input type="text" class="form-control form-control-sm" id="email"
+      <div>
+        <div class="egylabel">Email</div>
+        <input type="text" class="form-control form-control-sm oszlop4" id="email"
                maxlength="50" required autocomplete="off"
                [(ngModel)]="felhasznaloservice.DtoEdited.Email" name="email">
       </div>
     </div>
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Státusz</div>
-      </div>
-      <div class="col-md-2">
+      <div>
+        <div class="egylabel">Státusz</div>
         <select type="text" class="form-control form-control-sm"
                 [(ngModel)]="felhasznaloservice.DtoEdited.Statusz" name="statusz">
           <option>OK</option>
@@ -57,10 +47,8 @@
       </div>
     </div>
     <div class="row no-gutters editform-row">
-      <div class="col-md-2">
-        <div class="editform-title">Log</div>
-      </div>
-      <div class="col-md-2">
+      <div>
+        <div class="egylabel">Log</div>
         <select type="text" class="form-control form-control-sm"
                 [(ngModel)]="felhasznaloservice.DtoEdited.Logonlog" name="log">
           <option value="false">Nem</option>
@@ -69,8 +57,7 @@
       </div>
     </div>
 
-    <div class="row no-gutters">
-      <div class="col-md-2"></div>
+    <div class="row no-gutters editform-row">
       <button class="btn btn-sm btn-primary" [disabled]="!f.valid || eppFrissit" type="submit">Ok</button>
       <button class="btn btn-sm btn-default" style="margin-left:3px;" type="button" (click)="cancel()">Mégsem</button>
     </div>
